Add Support/Help Center buttons and update Help link to Loom demo

--- a/demo/expand health/v2/views/customers.html
+++ b/demo/expand health/v2/views/customers.html
@@ -1129,8 +1129,7 @@
 
     function openHelpCenter(event) {
       event.preventDefault();
-      // Open help center in new tab (could be external docs or internal help page)
-      window.open('/help', '_blank');
+      window.open('https://www.loom.com/share/f86b087ca29442aa9bc37ae6b806e1c3', '_blank');
     }
 
     function submitSupportForm(event) {
