--- a/demo/expand health/v2/views/inbox.html
+++ b/demo/expand health/v2/views/inbox.html
@@ -725,7 +725,7 @@
 
     function openHelpCenter(event) {
       event.preventDefault();
-      window.open('/help', '_blank');
+      window.open('https://www.loom.com/share/f86b087ca29442aa9bc37ae6b806e1c3', '_blank');
     }
 
     // N8N Webhook URL for support form
