Fix dropdown to be visible by default and add Add Task modal

--- a/demo/expand health/v2/views/lead-detail.html
+++ b/demo/expand health/v2/views/lead-detail.html
@@ -1198,7 +1198,7 @@
                 </svg>
               </div>
             </button>
-            <div class="stage-select-dropdown" id="stageDropdown">
+            <div class="stage-select-dropdown active" id="stageDropdown">
               <button type="button" class="stage-option" data-value="none" onclick="selectStage('none', 'None')">None</button>
               <button type="button" class="stage-option" data-value="new" onclick="selectStage('new', 'New')">New</button>
               <button type="button" class="stage-option" data-value="contacted" onclick="selectStage('contacted', 'Contacted')">Contacted</button>
